-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.4.2
-
None
-
-
120fc8244 (dev), cd81b9016 (6.6)
QCollator on ios using the posix backend which doesn't support numeric mode.
Would be good if this was fixed (NSString seems to know how to compare with numeric mode) but at least it should be documented that it is not supported
For Gerrit Dashboard: QTBUG-115852 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
495221,4 | QCollator: clarify the POSIX backend limitations | dev | qt/qtbase | Status: MERGED | +2 | 0 |
497135,2 | QCollator: clarify the POSIX backend limitations | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |