QCollator: clarify the POSIX backend limitations

This clarifies what doesn't work, that we print a warning, and that it
applies to all Unix systems aside from macOS, not just Linux.

Fixes: QTBUG-115852
Change-Id: I80612a7d275c41f1baf0fffd1779701e98e7552d
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 120fc8244a484a5fde5b19f2e603b05692b79f61)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>